objects/Contract.object
<CustomObject>
    <fields>
        <fullName>T_CurrentUserSalesPerson__c</fullName>
        <description>Checks if logged in user is the same as doctari sales person of the contract</description>
        <formula>IF( OR($User.Username = doctari_Sales_PersonLookUp__r.Username , ($User.FirstName + &apos; &apos; + $User.LastName) =  doctariSalesPerson__c ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Current User Sales Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentSendingInformation__c</fullName>
        <inlineHelpText>Zusätzliche Informationen über den Versand für die Vertragsabteilung</inlineHelpText>
        <label>Comment Sending Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentContractInformation__c</fullName>
        <inlineHelpText>Zusätzliche Informationen, die der Vertragsabteilung mitgeteilt wurden</inlineHelpText>
        <label>Comment Contract Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>doctari_Sales_PersonLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>doctari Sales PersonLookUp</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_in_trial_period__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Findet die Kündigung in der Probezeit statt?</inlineHelpText>
        <label>Termination in trial period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Contract_Start_Date__c</fullName>
        <description>Calculates minimum of all operation times „From__c“ values through lookup rollup summary app</description>
        <label>Earliest Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_before_the_start__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Der Vertrag wird noch vor Vertragsbeginn aufgehoben.</inlineHelpText>
        <label>Cancellation before the start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_of_contract_Employee__c</fullName>
        <inlineHelpText>Art des Vertrages</inlineHelpText>
        <label>Creation of contract Personal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbeitsvertrag Fachpfleger</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag Arbeitsvertrag Fachpfleger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historic_Created_Date_Doctors__c</fullName>
        <description>For doctors contracts this field shows the created date, even if the contract was imported and not created in Salesforce</description>
        <formula>CASE( doctari_client__c ,
					&quot;doctari Ärzte ANÜ GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ) ,
					&quot;doctari Med ANÜ GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ) ,
					NULL)</formula>
        <label>Historic Created Date Doctors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_during_employment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Der Vertrag wird während des laufenden Arbeitsverhältnisses aufgehoben.</inlineHelpText>
        <label>Cancellation during employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmploymentContractAnnex2Salary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vergütung und Abrechnungsmodus</inlineHelpText>
        <label>Employment Contract Annex 2 Salary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exemption_from_work_performance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Die Person wird für den Rest der Vertragslaufzeit freigestellt.</inlineHelpText>
        <label>Exemption from work performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Created_Date_Placement__c</fullName>
        <description>For permanent placement contracts this field shows the created date, even if the contract was imported and not created in Salesforce</description>
        <formula>CASE( doctari_client__c ,
					&quot;doctari GbR&quot;,  BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ),
					&quot;doctari GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ) ,
					NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historic Created Date Placement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Year_of_historic_created_date__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE( HistoricCreatedDate__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Year of historic created date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPersonForContractShipping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ansprechpartner des Kunden für den Bereich Vertragsversand</inlineHelpText>
        <label>Contact person for contract shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Contact person for contract shipping)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historic_Created_Date_Caregivers__c</fullName>
        <description>For caregiver contracts this field shows the created date, even if the contract was imported and not created in Salesforce</description>
        <formula>CASE( doctari_client__c ,
&quot;doctari Fachpflege GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ),
&quot;doctari Pflege GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ),
&quot;doctari Pflege ANÜ GmbH&quot;, BLANKVALUE( DATEVALUE(HistoricCreatedDate__c), DATEVALUE(CreatedDate) ),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historic Created Date Caregivers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_End_Date_Doctors__c</fullName>
        <description>Calculates maximum of all doctors operation times „To__c“ values through lookup rollup summary app</description>
        <label>Latest Contract End Date Doctors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X14_days_prior_Contract_end_date__c</fullName>
        <formula>Latest_Contract_End_Date__c   - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]14 days prior Contract end date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>differentShippingAddressCustomer__c</fullName>
        <description>sfc-3270</description>
        <inlineHelpText>Diese Adresse wird nicht für den Vertrag verwendet, sondern nur für das Anschreiben.</inlineHelpText>
        <label>different shipping address (Customer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>differentShippingAddressPersonal__c</fullName>
        <description>sfc-3270</description>
        <inlineHelpText>Diese Adresse wird nicht für den Vertrag verwendet, sondern nur für das Anschreiben.</inlineHelpText>
        <label>different shipping address (Personal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_End_Date_Caregiver__c</fullName>
        <description>Calculates maximum of all caregiver operation times „To__c“ values through lookup rollup summary app</description>
        <label>Latest Contract End Date Caregiver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appendix3EssentialWorkingConditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Wesentliche Arbeitsbedingungen (kundenseitig)</inlineHelpText>
        <label>Appendix 3 Essential Working Conditions</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Aufhebung</fullName>
        <active>true</active>
        <label>Aufhebung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kuendigung</fullName>
        <active>true</active>
        <label>Kündigung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stornierung</fullName>
        <active>true</active>
        <label>Stornierung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sonderurlaub</fullName>
        <active>true</active>
        <label>Sonderurlaub</label>
    </recordTypes>
    <recordTypes>
        <fullName>Porky_History</fullName>
        <active>true</active>
        <label>Porky (History)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Arbeitsvertrag</fullName>
        <active>true</active>
        <label>Arbeitsvertrag</label>
    </recordTypes>
    <recordTypes>
        <fullName>Einsatzvertrag</fullName>
        <active>true</active>
        <label>Einsatzvertrag</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ruhen_des_Arbeitsverh_ltnisses</fullName>
        <active>true</active>
        <label>Ruhen des Arbeitsverhältnisses</label>
    </recordTypes>
    <validationRules>
        <fullName>LockContracts</fullName>
        <active>true</active>
        <description>Hinders users from editing contracts, which are not in a draft status.</description>
        <errorConditionFormula>NOT(
				ISNEW() ||
				ISPICKVAL(PRIORVALUE(Status), &quot;Draft&quot;) ||
				$Permission.EditFinalContracts ||
				T_UnlockFinalContracts__c = true ||
				PRIORVALUE(T_UnlockFinalContracts__c) = true ||
				ISCHANGED(Operating_Days__c) ||
				ISCHANGED(Latest_Contract_End_Date_Doctors__c) ||
				ISCHANGED(Latest_Contract_End_Date_Caregiver__c) ||
				ISCHANGED(Latest_Contract_End_Date__c) ||
				ISCHANGED(Earliest_Contract_Start_Date__c) ||
				ISCHANGED(OperatingTime__c) ||
				ISCHANGED(T_Operation_Time_CM__c) ||
				ISCHANGED(T_CoVid_19_Email_pending__c)
				)</errorConditionFormula>
        <errorMessage>This contract can not be edited any more. It has already exceeded the draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RepealOperationContract</fullName>
        <active>true</active>
        <description>Checks whether the right information for that type of repeal are filled</description>
        <errorConditionFormula>UsedFromContract__r.RecordType.DeveloperName = &apos;Einsatzvertrag&apos; &amp;&amp; 
OR( Cancellation_before_the_start__c = true, Cancellation_during_employment__c = true, Exemption_from_work_performance__c = true)</errorConditionFormula>
        <errorMessage>Die Felder &quot;Aufhebung vor Vertragsbeginn&quot;, &quot;Aufhebung während der Beschäftigung&quot; und &quot;Freistellung der Arbeitsleistung&quot; sind nur für Aufhebungen von Arbeitsverträgen relevant und dürfen daher für Einsatzverträge nicht ausgewählt werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactPersonForContractShippingRequired</fullName>
        <active>false</active>
        <errorConditionFormula>IF( TEXT(Status) = &apos;Submitted to contract department&apos; &amp;&amp; ISBLANK(ContactPersonEmployees__c) , true, false)</errorConditionFormula>
        <errorMessage>Bitte befülle das Feld &quot;Ansprechpartner für Vertragsversand&quot; auf dem Reiter &quot;Details&quot;, bevor der Vertrag nach Landwehr geschickt werden kann.</errorMessage>
    </validationRules>
</CustomObject>